<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8A6C2"
    android:orientation="vertical"
    tools:context=".activity.DetailView">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="20dp"
        android:elevation="20dp"
        android:background="#EEF893"
        app:cardCornerRadius="20dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="243dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#3D1597" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/updateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/update" />
    <Button
        android:id="@+id/deleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:text="@string/delete"
        />


</LinearLayout>